@@ -23,4 +23,4 @@ spidertron-enhancements-enter-entity-custom=Behaves more reliably than __CONTROL
 spidertron-enhancements-show-spider-on-entity=This setting may be unstable. Enable at your own risk and ensure that you are autosaving regularly.\nIt will look better future updates.
 
 [entity-name]
-spidertron-enhancements-dummy-spidertron=Travelling Spidertron
+spidertron-enhancements-dummy-spidertron=Travelling __1__
